--- a/notebooks/TD2.ipynb
+++ b/notebooks/TD2.ipynb
@@ -162,7 +162,7 @@
     "        X = torch.nn.functional.relu(X)\n",
     "        X = self.layer_2(X)\n",
     "        \n",
-    "        return torch.nn.functional.relu(X)"
+    "        return X"
    ]
   },
   {
