--- a/notebooks/TD2.ipynb
+++ b/notebooks/TD2.ipynb
@@ -174,6 +174,14 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2fc903ff-a528-46a5-8983-6fc8ecd519d7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "id": "17b3957b-e9fe-4139-aa79-8f8c796ff272",
    "metadata": {},
@@ -191,7 +199,7 @@
    "source": [
     "## Extraction des données\n",
     "\n",
-    "Vous trouverez [ici](https://download.pytorch.org/tutorial/data.zip) un zip avec des fichiers \\[nationalité\\].txt contenant des prénoms pour chaque nationalité. <br/>\n",
+    "Vous trouverez [sur ce lien](https://download.pytorch.org/tutorial/data.zip) un zip avec des fichiers \\[nationalité\\].txt contenant des prénoms pour chaque nationalité. <br/>\n",
     "Nous allons avoir un jeu de données pays -> prénoms."
    ]
   },
@@ -280,14 +288,6 @@
     "\n",
     "Dans les prénoms, nous avons des caractères spéciaux (comme \"ö\", \"é\", etc), donc nous utiliserons la table ASCII pour traduire les lettres en indice"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ead52645-92ff-4553-90bd-7f2246da2a31",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
